--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <a class="nav-link" href="#"><i class="fa-brands fa-lg fa-linkedin"> Linkedin</i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link"><button type="button" class="btn btn-sm btn-success">Success</button>
+                            <a class="nav-link"><button type="button" class="btn btn-sm btn-success" height="40">Success</button>
                             </a>
                         </li>
                     </ul>
