--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
         </nav>
 
 
-        <div class="banner"></div>
+        <div class="banner">
+
+        </div>
+
         <div class="about-us"></div>
 
     </header>
