--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/da78769627.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles/dist/tsparticles.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -26,14 +27,14 @@
               </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
+                        <li class="nav-item ms-auto">
                             <a class="nav-link" href="#"><i class="fa-brands fa-lg fa-facebook"> Facebook</i></a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item ms-auto">
                             <a class="nav-link" href="#"><i class="fa-brands fa-lg fa-linkedin"> Linkedin</i></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link"><button type="button" class="btn btn-sm btn-success" height="40">Success</button>
+                        <li class="nav-item ms-auto">
+                            <a class="nav-link"><button type="button" class="btn btn-sm btn-success" height="40">Login</button>
                             </a>
                         </li>
                     </ul>
@@ -42,8 +43,7 @@
         </nav>
 
 
-        <div class="banner">
-
+        <div class="container-xxxl banner img-fluid">
         </div>
 
         <div class="about-us"></div>
@@ -61,6 +61,8 @@
     </main>
 
     <footer></footer>
+
+    <script src="main.js"></script>
 
 </body>
 
