--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <header>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
+            <div class="container-fluid container-1">
                 <a class="navbar-brand" href="#">
                     <img src="https://argentinaprograma.inti.gob.ar/pluginfile.php/1/theme_moove/logo/1648503444/APLogo-20-20.png" alt="" width="60" height="48" class="d-inline-block "> Argentina Programa - #YoPrograma
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item ms-auto">
@@ -34,7 +34,8 @@
                             <a class="nav-link" href="#"><i class="fa-brands fa-lg fa-linkedin"> Linkedin</i></a>
                         </li>
                         <li class="nav-item ms-auto">
-                            <a class="nav-link"><button type="button" class="btn btn-sm btn-success" height="40">Login</button>
+                            <a class="nav-link"><button type="button" class="btn btn-sm btn-success"
+                                    height="40">Login</button>
                             </a>
                         </li>
                     </ul>
@@ -43,10 +44,36 @@
         </nav>
 
 
-        <div class="container-xxxl banner img-fluid">
+        <div class="container-fluid container-2">
+
+            <div class="banner img-fluid"></div>
+
+            <div class="about-us">
+                <h4>Sobre Mí</h4>
+                <div class="container-xxl">
+                    <div class="row">
+                        <div class="col-2">
+                            <div class="profile"></div>
+                        </div>
+                        <div class="col-10">
+                            <div class="information"></div>
+                        </div>
+                    </div>
+
+
+
+
+                </div>
+
+            </div>
+
+
         </div>
 
-        <div class="about-us"></div>
+        </div>
+
+
+
 
     </header>
 
