--- a/index.html
+++ b/index.html
@@ -50,17 +50,10 @@
 
             <div class="about-us">
                 <h4>Sobre Mí</h4>
-                <div class="container-xxl">
-                    <div class="row">
-                        <div class="col-2">
-                            <div class="profile"></div>
-                        </div>
-                        <div class="col-10">
-                            <div class="information"></div>
-                        </div>
-                    </div>
+                <div class="d-flex container-xxl">
 
-
+                    <div class="profile col-2"></div>
+                    <div class="information col-10"></div>
 
 
                 </div>
