--- a/index.html
+++ b/index.html
@@ -44,24 +44,32 @@
         </nav>
 
 
-        <div class="container-fluid container-2">
 
-            <div class="banner img-fluid"></div>
+        <div class="banner img-fluid"></div>
 
-            <div class="about-us">
-                <h4>Sobre Mí</h4>
-                <div class="d-flex container-xxl">
+        <div class="about-us">
+            <h4>Sobre Mí</h4>
 
-                    <div class="profile col-2"></div>
-                    <div class="information col-10"></div>
+            <div class="contenedor">
 
+                <div class="profile">
+                    <div class="avatar">
+                        <img class="img-avatar" src="https://www.clipartmax.com/png/full/248-2487966_matthew-man-avatar-icon-png.png" alt="">
+                    </div>
+                    <div class="name">
+                        <p>Benjamin Araoz</p>
+                    </div>
 
                 </div>
 
+                <div class="information">hola</div>
+
+
             </div>
 
-
         </div>
+
+
 
         </div>
 
