--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+    <!-- HEADER PORTFOLIO SECTION-->
     <header>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -42,46 +42,66 @@
                 </div>
             </div>
         </nav>
-
-
-
+        <!-- BANNER PROFILE SECTION-->
         <div class="banner img-fluid"></div>
 
         <div class="about-us">
-            <h4>Sobre Mí</h4>
-
+            <!-- Profile & Avatar -->
             <div class="contenedor">
-
                 <div class="profile">
                     <div class="avatar">
                         <img class="img-avatar" src="https://www.clipartmax.com/png/full/248-2487966_matthew-man-avatar-icon-png.png" alt="">
                     </div>
                     <div class="name">
                         <p>Benjamin Araoz</p>
+                        <p>FullStack Web Developer </p>
                     </div>
-
                 </div>
-
-                <div class="information">hola</div>
-
+                <!-- About-Us -->
+                <hr>
+                <div class="information">
+                    <h5>Software Development</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni aspernatur nihil nobis, perspiciatis, officiis voluptate eligendi illum quibusdam cum cumque veritatis commodi, quam recusandae. Deserunt voluptate quas doloribus eum culpa?</p>
+                    <h5>Student Development</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptatibus dignissimos architecto, nulla doloribus eaque quo quod quia commodi fuga?</p>
+                    <h5>Gamer</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ipsa impedit, vero ipsam nulla nemo accusamus molestias at incidunt repellendus recusandae voluptatem eligendi quia nesciunt nobis eum tempora voluptatibus ut? Maiores,
+                        odio iusto? Architecto impedit labore odio, aliquid hic excepturi!</p>
+                </div>
 
             </div>
 
         </div>
 
-
-
         </div>
-
-
-
 
     </header>
 
-    <main>
+    <!-- MAIN PORTFOLIO SECTION -->
+    <main class="">
 
-        <section class="experiencie"></section>
-        <section class="education"></section>
+        <section class="experience">
+            <h4>Experiences</h4>
+            <hr>
+            <h5>Texto 1</h5>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic nemo culpa in ipsum molestias dolore at quod doloribus possimus quidem.</p>
+            <h5>Texto 2</h5>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque, distinctio.</p>
+            <h5>Texto 3</h5>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi, sequi in voluptatibus aspernatur, assumenda earum distinctio ipsam provident, eligendi tempora optio libero nemo impedit quod! Sed nostrum sequi iure est.</p>
+            <h5>Texto 4</h5>
+        </section>
+        <section class="education">
+            <h4>Education</h4>
+            <hr>
+            <h5>EducationIT</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In officiis animi distinctio veniam quo molestiae eveniet dignissimos? Officia voluptatem, accusantium necessitatibus quod illum deserunt nam reiciendis tempora, perspiciatis voluptatum
+                quam!
+            </p>
+            <h5>#ArgentinaPrograma</h5>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab amet commodi reprehenderit aspernatur quo eius explicabo modi excepturi rerum ea.</p>
+
+        </section>
         <section class="hard-soft-skills"></section>
         <section class="projects"></section>
 
