--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
     <!-- MAIN PORTFOLIO SECTION -->
     <main class="">
 
+        <!-- EXPERIENCE SECTION -->
+
         <section class="experience">
             <h4>Experiences</h4>
             <hr>
@@ -91,6 +93,8 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi, sequi in voluptatibus aspernatur, assumenda earum distinctio ipsam provident, eligendi tempora optio libero nemo impedit quod! Sed nostrum sequi iure est.</p>
             <h5>Texto 4</h5>
         </section>
+
+        <!-- EDUCATION SECTION -->
         <section class="education">
             <h4>Education</h4>
             <hr>
@@ -102,7 +106,40 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab amet commodi reprehenderit aspernatur quo eius explicabo modi excepturi rerum ea.</p>
 
         </section>
-        <section class="hard-soft-skills"></section>
+
+        <!-- HARD AND SOFT SKILLS - SECTION -->
+        <section class="hard-soft-skills">
+
+            <span></span>
+            <div class="skill1 skills">
+                <span class="skill-name">JavaScript</span>
+                <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:65"></div>
+            </div>
+            <div class="skill2 skills">
+                <span class="skill-name">JavaScript</span>
+                <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:66"></div>
+            </div>
+            <div class="skill3 skills">
+                <span class="skill-name">JavaScript</span>
+                <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:98"></div>
+            </div>
+
+
+            <div class="skill4 skills">
+                <span class="skill-name">JavaScript</span>
+                <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:65"></div>
+            </div>
+            <div class="skill5 skills">
+                <span class="skill-name">JavaScript</span>
+                <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:65"></div>
+            </div>
+            <div class="skill6 skills">
+                <span class="skill-name">JavaScript</span>
+                <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:65"></div>
+            </div>
+        </section>
+
+        <!-- PROJECTS SECTION -->
         <section class="projects"></section>
 
 
