--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- HEADER PORTFOLIO SECTION-->
     <header>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky">
             <div class="container-fluid container-1">
                 <a class="navbar-brand" href="#">
                     <img src="https://argentinaprograma.inti.gob.ar/pluginfile.php/1/theme_moove/logo/1648503444/APLogo-20-20.png" alt="" width="60" height="48" class="d-inline-block "> Argentina Programa - #YoPrograma
@@ -109,34 +109,30 @@
 
         <!-- HARD AND SOFT SKILLS - SECTION -->
         <section class="hard-soft-skills">
+            <h4>Hard and Soft Skills</h4>
+            <hr>
 
-            <span></span>
-            <div class="skill1 skills">
-                <span class="skill-name">JavaScript</span>
-                <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:65"></div>
-            </div>
-            <div class="skill2 skills">
-                <span class="skill-name">JavaScript</span>
-                <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:66"></div>
-            </div>
-            <div class="skill3 skills">
-                <span class="skill-name">JavaScript</span>
-                <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:98"></div>
+            <div class="box-skills">
+                <div class="skill1 skills">
+                    <span class="skill-name">JavaScript</span>
+                    <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:65"></div>
+                </div>
+                <div class="skill2 skills">
+                    <span class="skill-name">JavaScript</span>
+                    <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:66"></div>
+                </div>
+                <div class="skill3 skills">
+                    <span class="skill-name">JavaScript</span>
+                    <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:98"></div>
+                </div>
+                <div class="skill4 skills">
+                    <span class="skill-name">JavaScript</span>
+                    <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:65"></div>
+                </div>
+
             </div>
 
 
-            <div class="skill4 skills">
-                <span class="skill-name">JavaScript</span>
-                <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:65"></div>
-            </div>
-            <div class="skill5 skills">
-                <span class="skill-name">JavaScript</span>
-                <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:65"></div>
-            </div>
-            <div class="skill6 skills">
-                <span class="skill-name">JavaScript</span>
-                <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:65"></div>
-            </div>
         </section>
 
         <!-- PROJECTS SECTION -->
