--- a/index.html
+++ b/index.html
@@ -141,7 +141,34 @@
 
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class=" footer1">
+            <div class="box1 box-redes-main">
+
+                <div class="box-redes box-left">
+                    <hr>
+                </div>
+
+                <div class="box-redes box-mid">
+                    <ul>
+                        <li><i class="fa-brands fa-facebook"></i></li>
+                        <li><i class="fa-brands fa-instagram"></i></li>
+                        <li><i class="fa-brands fa-github"></i></li>
+                        <li><i class="fa-brands fa-linkedin"></i></li>
+                        <li><i class="fa-brands fa-twitter"></i></li>
+                        <li><i class="fa-brands fa-discord"></i></li>
+                    </ul>
+
+                </div>
+
+                <div class="box-redes box-right">
+                    <hr>
+                </div>
+
+            </div>
+            <div class="box2"></div>
+        </div>
+    </footer>
 
     <script src="main.js"></script>
 
