--- a/index.html
+++ b/index.html
@@ -115,19 +115,23 @@
             <div class="box-skills">
                 <div class="skill1 skills">
                     <span class="skill-name">JavaScript</span>
-                    <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:65"></div>
+                    <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:65">
+                    </div>
                 </div>
                 <div class="skill2 skills">
                     <span class="skill-name">JavaScript</span>
-                    <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:66"></div>
+                    <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:66">
+                    </div>
                 </div>
                 <div class="skill3 skills">
                     <span class="skill-name">JavaScript</span>
-                    <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:98"></div>
+                    <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:98">
+                    </div>
                 </div>
                 <div class="skill4 skills">
                     <span class="skill-name">JavaScript</span>
-                    <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:65"></div>
+                    <div role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="--value:65">
+                    </div>
                 </div>
 
             </div>
@@ -145,24 +149,20 @@
         <div class=" footer1">
             <div class="box1 box-redes-main">
 
-                <div class="box-redes box-left">
-                    <hr>
-                </div>
-
                 <div class="box-redes box-mid">
-                    <ul>
-                        <li><i class="fa-brands fa-facebook"></i></li>
-                        <li><i class="fa-brands fa-instagram"></i></li>
-                        <li><i class="fa-brands fa-github"></i></li>
-                        <li><i class="fa-brands fa-linkedin"></i></li>
-                        <li><i class="fa-brands fa-twitter"></i></li>
-                        <li><i class="fa-brands fa-discord"></i></li>
-                    </ul>
 
-                </div>
-
-                <div class="box-redes box-right">
-                    <hr>
+                    <a href="" class="link-redes"><i class="fa-brands fa-facebook fa-2xl" ></i>
+                    </a>
+                    <a href="" class="link-redes"><i class="fa-brands fa-instagram fa-2xl"></i>
+                    </a>
+                    <a href="" class="link-redes"><i class="fa-brands fa-github fa-2xl"></i>
+                    </a>
+                    <a href="" class="link-redes"><i class="fa-brands fa-linkedin fa-2xl"></i>
+                    </a>
+                    <a href="" class="link-redes"><i class="fa-brands fa-twitter fa-2xl"></i>
+                    </a>
+                    <a href="" class="link-redes"><i class="fa-brands fa-discord fa-2xl"></i>
+                    </a>
                 </div>
 
             </div>
