--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             </div>
             <div class="box2">
                 <div class="box2-in1t">
-                    <p>&copy; 2022 Benjamín Aráoz</p>
+                    <p>Copyright © 2021 Benjamín Aráoz. All rights reserved.</p>
                 </div>
 
                 <div class="box2-int2">
