--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
                 </div>
             </div>
         </nav>
+
         <!-- BANNER PROFILE SECTION-->
-        <div class="banner img-fluid particles-js" id="particles-js"></div>
+        <div class="banner img-fluid" id="particles-js"></div>
 
         <div class="about-us">
             <!-- Profile & Avatar -->
@@ -62,13 +63,23 @@
                 <!-- About-Us -->
                 <hr>
                 <div class="information">
-                    <h5>Software Development</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni aspernatur nihil nobis, perspiciatis, officiis voluptate eligendi illum quibusdam cum cumque veritatis commodi, quam recusandae. Deserunt voluptate quas doloribus eum culpa?</p>
-                    <h5>Student Development</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptatibus dignissimos architecto, nulla doloribus eaque quo quod quia commodi fuga?</p>
-                    <h5>Gamer</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ipsa impedit, vero ipsam nulla nemo accusamus molestias at incidunt repellendus recusandae voluptatem eligendi quia nesciunt nobis eum tempora voluptatibus ut? Maiores,
-                        odio iusto? Architecto impedit labore odio, aliquid hic excepturi!</p>
+                    <div class="info1">
+
+                        <h5>Software Development</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni aspernatur nihil nobis, perspiciatis, officiis voluptate eligendi illum quibusdam cum cumque veritatis commodi, quam recusandae. Deserunt voluptate quas doloribus eum
+                            culpa?
+                        </p>
+                        <h5>Student Development</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas voluptatibus dignissimos architecto, nulla doloribus eaque quo quod quia commodi fuga?</p>
+                        <h5>Gamer</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ipsa impedit, vero ipsam nulla nemo accusamus molestias at incidunt repellendus recusandae voluptatem eligendi quia nesciunt nobis eum tempora voluptatibus ut?
+                            Maiores, odio iusto? Architecto impedit labore odio, aliquid hic excepturi!</p>
+                    </div>
+                    <div class="info-btn">
+                        <button type="submit" class="btn btn-primary">Tengo interes en...</button>
+                        <button type="submit" class="btn btn-secondary">Añadir Sección</button>
+                        <button type="submit" class="btn btn-secondary">Más</button>
+                    </div>
                 </div>
 
             </div>
@@ -207,7 +218,7 @@
 
             </div>
             <div class="box2">
-                <div class="box2-in1t">
+                <div class="box2-int1">
                     <p>Copyright © 2021 Benjamín Aráoz. All rights reserved.</p>
                 </div>
 
